arquivo javascript para suavização de scroll e particulas de background

--- a/index.html
+++ b/index.html
@@ -165,5 +165,8 @@
     <footer class="footer container">
         <p>Copyright © 2025 - Developed by Ricardo Sampaio.</p>
     </footer>
+
+    <canvas id="bgCanvas"></canvas>
+    <script src="javascript.js"></script>
 </body>
 </html>
