--- a/index.html
+++ b/index.html
@@ -10,43 +10,48 @@
 </head>
 
 <body>
-    <header class="nav">
-        <nav class="nav__content container">
-            <h2 class="nav__logo title">&lt; Ricardo <span class="accent">Sampaio</span><span id="blink"> | </span>&gt;
-            </h2>
-            <ul class="nav__link">
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#projects">Projetos</a></li>
-                <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#contact">Contato</a></li>
-            </ul>
+    <header id="header">
+        <nav class="nav container">
+            <a href="#" class="logo title">&lt; Ricardo <span class="accent">Sampaio</span> | &gt;
+            </a>
+            <div class="nav-menu">
+                <ul class="nav-list">
+                    <li><a href="#home" class="nav-link active-link">Início</a></li>
+                    <li><a href="#about" class="nav-link">Sobre</a></li>
+                    <li><a href="#projects" class="nav-link">Projetos</a></li>
+                    <li><a href="#skills" class="nav-link">Habilidades</a></li>
+                    <li><a href="#contact" class="nav-link">Contato</a></li>
+                </ul>
+            </div>
+            
+            <button class="btn-mobile" aria-label="Abrir menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
         </nav>
     </header>
+
     <main>
-        <section class="hero__content container">
-            <h1 class="title">FRONTEND <span class="accent">DEVELOPER</span></h1>
-            <p>Criando interfaces modernas e funcionais, com foco em código limpo, responsividade e uma boa experiência
-                para o usuário.</p>
-            <a href="#projects" class="btn">PROJETOS</a>
-            <div class="scroll-down">
-                <span></span>
-                <span></span>
-                <span></span>
+        <section id="home" class="section container divider">
+            <div class="home-text">
+                <h1 class="title">FRONTEND <span class="accent">DEVELOPER</span></h1>
+                <p>Desenvolvedor Frontend dedicado a aprender e aplicar as melhores práticas, criando interfaces intuitivas.</p>
+                <a href="#projects" class="btn">PROJETOS</a>
+            </div>
+
+            <div class="home-img">
+                <img src="assets/profile-picture.jpg" alt="Foto de perfil de Ricardo Sampaio">
             </div>
         </section>
-        <section id="about" class="about__content container divider reveal">
+
+        <section id="about" class="section container divider">
             <h2 class="title">SOBRE MIM</h2>
-            <div class="about__item">
-                <div class="about__img">
-                    <img src="assets/picture.png" alt="Foto de Perfil">
+            <div class="about-container">
+                <div class="about-img">
+                    <img src="assets/picture.png" alt="Ilustração abstrata de tecnologia">
                 </div>
-                <div class="about__text">
-                    <h2 class="title">&lt; Ricardo Sampaio &gt;</h2>
-                    <p>Sou um desenvolvedor frontend em início de carreira, focado em criar interfaces modernas,
-                        responsivas e acessíveis. Trabalho principalmente com <strong>HTML</strong>,
-                        <strong>CSS</strong>, <strong>JavaScript</strong> e <strong>React</strong>, buscando unir design
-                        e código limpo para oferecer experiências digitais funcionais e intuitivas enquanto aprimoro
-                        minhas habilidades a cada projeto.
+                <div class="about-text">
+                    <h3 class="title">&lt; Ricardo Sampaio &gt;</h3>
+                    <p>Sou um desenvolvedor frontend em início de carreira, focado em criar interfaces modernas, responsivas e acessíveis. Trabalho principalmente com <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> e <strong>React</strong>, buscando unir design e código limpo para oferecer experiências digitais funcionais e intuitivas enquanto aprimoro minhas habilidades a cada projeto.
                     </p>
                     <a  class="btn" href="assets/Ricardo_Sampaio_Curriculo.pdf" download>
                         <i class="fa-solid fa-file-arrow-down"></i>
@@ -55,118 +60,112 @@
                 </div>
             </div>
         </section>
-        <section id="projects" class="projects__content container divider reveal">
+
+        <section id="projects" class="section container divider">
             <h2 class="title">PROJETOS</h2>
-            <div class="projects__grid">
-                <article class="project__card">
-                    <img src="assets/em-breve.png" alt="Projeto 3" width="100px">
-                    <h3>Projeto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur placeat laborum rem
-                        maiores? Eius sit, officiis possimus repellendus et voluptas error magnam commodi ipsa,
-                        cupiditate saepe molestiae, blanditiis fuga recusandae! Tecnologias usadas: HTML, CSS, JS …
+            <div class="projects-grid">
+                <article class="projects-card">
+                    <img src="assets/project-01-prime-burger.jpg" alt="Página inicial do projeto Prime Burger">
+                    <h3>Prime Burger</h3>
+                    <p>Projeto de uma hamburgueria moderna, focado em criar uma experiência interativa e fácil de usar. O desafio foi transformar um design profissional em uma landing page responsiva, usando HTML semântico, CSS (Grid/Flexbox) para o layout e JavaScript para dar vida a interações, como o menu mobile.
                     </p>
-                    <!-- <a href="link" target="_blank" rel="noopener"></a> -->
-                    <a href="#">Ver projeto</a>
-                </article>
-                <article class="project__card">
-                    <img src="assets/em-breve.png" alt="Projeto 3" width="100px">
-                    <h3>Projeto 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur placeat laborum rem
-                        maiores? Eius sit, officiis possimus repellendus et voluptas error magnam commodi ipsa,
-                        cupiditate saepe molestiae, blanditiis fuga recusandae! Tecnologias usadas: HTML, CSS, JS …
-                    </p>
-                    <a href="#">Ver projeto</a>
-                </article>
-                <article class="project__card">
-                    <img src="assets/em-breve.png" alt="Projeto 3" width="100px">
-                    <h3>Projeto 3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur placeat laborum rem
-                        maiores? Eius sit, officiis possimus repellendus et voluptas error magnam commodi ipsa,
-                        cupiditate saepe molestiae, blanditiis fuga recusandae! Tecnologias usadas: HTML, CSS, JS …
-                    </p>
-                    <a href="#">Ver projeto</a>
+                    <p>HTML5, CSS3, JavaScript.</p>
+                    <div class="links">
+                        <a href="https://rgsampaio.github.io/prime-burger/" target="_blank" rel="noopener">Ver projeto</a>
+                        <a href="https://github.com/rgsampaio/prime-burger" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a>
+                    </div>
                 </article>
             </div>
         </section>
-        <section id="skills" class="skills__content container divider reveal">
+
+        <section id="skills" class="section container divider">
             <h2 class="title">HABILIDADES</h2>
-            <p>
-                Principais ferramentas e tecnologias que impulsionam meus projetos:
-            </p>
-            <div class="skills__grid">
-                <article class="skill__item">
-                    <i class="fa-brands fa-html5" style="color:#e44d26;"></i>
+            <p>Principais ferramentas e tecnologias que impulsionam meus projetos:</p>
+
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <i class="fa-brands fa-html5"></i>
                     <span>HTML5</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-css3-alt" style="color:#379BD6;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-css3-alt"></i>
                     <span>CSS3</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-js-square" style="color:#f7df1e;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-js-square"></i>
                     <span>JavaScript</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-react" style="color:#51C3E1;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-react"></i>
                     <span>React</span>
-                </article>
-                <article class="skill__item">
+                </div>
+
+                <div class="skill-item">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
                         <path
                             d="M64.004 25.602c-17.067 0-27.73 8.53-32 25.597 6.398-8.531 13.867-11.73 22.398-9.597 4.871 1.214 8.352 4.746 12.207 8.66C72.883 56.629 80.145 64 96.004 64c17.066 0 27.73-8.531 32-25.602-6.399 8.536-13.867 11.735-22.399 9.602-4.87-1.215-8.347-4.746-12.207-8.66-6.27-6.367-13.53-13.738-29.394-13.738zM32.004 64c-17.066 0-27.73 8.531-32 25.602C6.402 81.066 13.87 77.867 22.402 80c4.871 1.215 8.352 4.746 12.207 8.66 6.274 6.367 13.536 13.738 29.395 13.738 17.066 0 27.73-8.53 32-25.597-6.399 8.531-13.867 11.73-22.399 9.597-4.87-1.214-8.347-4.746-12.207-8.66C55.128 71.371 47.868 64 32.004 64zm0 0"
                             fill="#18B4B8" />
                     </svg>
                     <span>Tailwind</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-git-alt" style="color:#DF4C37;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-git-alt"></i>
                     <span>Git</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-github" style="color:#ffffff;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-github"></i>
                     <span>GitHub</span>
-                </article>
-                <article class="skill__item">
-                    <i class="fa-brands fa-figma" style="color:#A25AFF;"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-figma"></i>
                     <span>Figma</span>
-                </article>
+                </div>
             </div>
         </section>
-        <section id="contact" class="contact__content container reveal">
+
+        <section id="contact" class="section container">
             <h2 class="title">FALE COMIGO</h2>
-            <div class="contact__link">
-                <div class="contact__card" style="--color: var(--whatsapp); --shadow: var(--whatsapp);">
+            <p>Estou sempre em busca de novas conexões e desafios. Se você tem um projeto em mente ou uma vaga, adoraria conversar! Mande uma mensagem e retornarei o mais breve possível.</p>
+
+            <div>
+                <div class="contact-card" style="--color: var(--whatsapp); --shadow: var(--whatsapp);">
                     <a href="https://wa.me/5511949506924" target="_blank">
                         <i class="fa-brands fa-whatsapp"></i>
-                        <p>WhatsApp</p>
+                        <span>WhatsApp</span>
                     </a>
                 </div>
-                <div class="contact__card" style="--color: var(--linkedin); --shadow: var(--linkedin);">
+                <div class="contact-card" style="--color: var(--linkedin); --shadow: var(--linkedin);">
                     <a href="https://www.linkedin.com/in/ricardo-galdino-de-sampaio/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
-                        <p>LinkedIn</p>
+                        <span>LinkedIn</span>
                     </a>
                 </div>
-                <div class="contact__card" style="--color: var(--github); --shadow: var(--github);">
+                <div class="contact-card" style="--color: var(--github); --shadow: var(--github);">
                     <a href="https://github.com/rgsampaio" target="_blank">
                         <i class="fa-brands fa-github"></i>
-                        <p>GitHub</p>
+                        <span>GitHub</span>
                     </a>
                 </div>
-                <div class="contact__card" style="--color: var(--email); --shadow: var(--email);">
+                <div class="contact-card" style="--color: var(--email); --shadow: var(--email);">
                     <a href="mailto:ricardosampaiocontato@gmail.com" target="_blank">
                         <i class="fa-solid fa-envelope"></i>
-                        <p>E-mail</p>
+                        <span>E-mail</span>
                     </a>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="footer container">
+
+    <footer class="footer section container">
         <p>Copyright © 2025 - Developed by Ricardo Sampaio.</p>
     </footer>
 
-    <canvas id="bgCanvas"></canvas>
-    <script src="javascript.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
